--- a/docker-crash-course-master/02-todo-web-application-h2/pom.xml
+++ b/docker-crash-course-master/02-todo-web-application-h2/pom.xml
@@ -116,7 +116,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>in28min/${project.name}</repository>
+					<repository>theone1neo/${project.name}</repository>
 					<tag>${project.version}</tag>
 					<skipDockerInfo>true</skipDockerInfo>
 				</configuration>
