Section 6.31 - Running MySQL as Docker Container notes and exercises work in progress

--- a/docker-crash-course-master/03-todo-web-application-mysql/pom.xml
+++ b/docker-crash-course-master/03-todo-web-application-mysql/pom.xml
@@ -129,7 +129,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>in28min/${project.name}</repository>
+					<repository>theone1neo/${project.name}</repository>
 					<tag>${project.version}</tag>
 					<skipDockerInfo>true</skipDockerInfo>
 				</configuration>
