--- a/docker-crash-course-master/03-todo-web-application-mysql/src/main/resources/application.properties
+++ b/docker-crash-course-master/03-todo-web-application-mysql/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:todos}
 spring.datasource.username=${RDS_USERNAME:todos-user}
-spring.datasource.password=${RDS_PASSWORD:dummytodos}
+spring.datasource.password=${RDS_PASSWORD:sqltodos}
 #spring.datasource.url=jdbc:mysql://localhost:3306/todos
 #spring.datasource.username=todos-user
-#spring.datasource.password=dummytodos
+#spring.datasource.password=sqltodos
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
